removed card repo, refactored utils folder on test, clean up code